Rydd vekk gammal unødvendig kode. Fornya test av KodeverkRestTjeneste.
Erstatta med ny kode for å returnere alle kodeverdier.